--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <body>
 	<main>
 		<h1>Le jeu du Jacques noir</h1>
-		<div class="board">
+		<div class="board flow-content">
 			<div class="field-block">
-				<label>
-					Obligatoire: veuillez définir un nombre de joueurs, entre 1 et 7, inclusivement.
+				<label class="flow-content">
+					<span>Obligatoire: veuillez définir un nombre de joueurs, entre 1 et 7, inclusivement.</span>
 					<input name="playerCount" type="number" min="1" max="7" required>
 				</label>
 			</div>
