--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-	<main>
+	<main class="flow-content">
 		<h1>Le jeu du Jacques noir</h1>
 		<div class="board flow-content">
 			<div class="field-block">
